--- a/src/styles/_landing.scss
+++ b/src/styles/_landing.scss
@@ -46,6 +46,11 @@ $default-font-size-list-items: 14px;
 
   padding-top: 26px;
   margin: 0;
+
+  @media screen and (max-width: $breakpoint-mobile) {
+    font-size: 11px;
+    line-height: 145%;
+  }
 }
 
 @mixin landing-list-item-small {
